// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<ResizableTextArea__StyledTextarea
  className="ResizableTextArea"
  disabled={false}
  onChange={[Function]}
  onInput={[Function]}
  rows={1}
  transparent={false}
  value="test"
/>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<textarea
  className="ResizableTextArea__StyledTextarea-sc-1fskja0-0 lgtiyH ResizableTextArea"
  disabled={false}
  onChange={[Function]}
  onInput={[Function]}
  rows={1}
  value="test"
/>
`;
